# python-type-stripper

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: add-items-to-project.yaml  ci.yaml  cron-precommit.yaml  precommit-autoupdate.yaml  pypi-release.yaml  release.yaml
src/type_stripper/: __init__.py
