[project]
name = "type-stripper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Galen Rice", email = "griceturrble@protonmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "libcst>=1.5.1",
]

[project.scripts]
type-stripper = "type_stripper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = """
--verbose
--cov=type_stripper
--cov-report=html
--cov-fail-under=90
"""
